--- a/sample3/sample3/Base.lproj/Main.storyboard
+++ b/sample3/sample3/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="button" destination="smB-e6-H0c" id="hC7-in-SSG"/>
+                        <outlet property="button" destination="smB-e6-H0c" id="Xi6-wE-wNM"/>
                         <outlet property="xconstraint" destination="qTx-X9-mPy" id="gkD-rG-8aS"/>
                     </connections>
                 </viewController>
